# ytsub

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: cd.yml  ci.yml  nix.yml
docs/: configuration.md
example/: config.toml
src/: app.rs  channel.rs  cli.rs  client.rs  clipboard.rs  commands.rs  database.rs  help.rs  import.rs  input.rs  invidious.rs  list.rs  main.rs  message.rs  player.rs  protobuf.rs  ro_cell.rs  search.rs  stream_formats.rs  ui.rs  utils.rs
src/api/: invidious.rs  local.rs  mod.rs
src/config/: keys.rs  mod.rs  options.rs  theme.rs
src/emulator/: mod.rs
src/thumbnail/: emulator.rs  mod.rs  mux.rs
src/thumbnail/protocols/: chafa.rs  halfblocks.rs  iip.rs  kitty.rs  mod.rs  sixel.rs  ueberzug.rs
src/ui/: mod.rs  utils.rs
