[package]
name = "ytsub"
version = "0.6.0"
edition = "2024"
description = "A subscriptions only TUI Youtube client"
authors = ["Berke Enercan <berkeenercan@tutanota.com>"]
repository = "https://github.com/sarowish/ytsub"
license = "GPL-3.0"
readme = "README.md"
keywords = ["youtube", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.99"
clap = "4.5.44"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures-util = "0.3.31"
num_cpus = "1.17.0"
rand = "0.9.2"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["time", "macros", "rt-multi-thread", "process"] }
tokio-util = "0.7.16"
unicode-width = "0.2.0"
unicode-segmentation = "1.12.0"
toml = "0.9.5"
csv = "1.3.1"
quick-xml = { version = "0.38.1", features = ["serialize"] }
chrono = "0.4.41"
dyn-clone = "1.0.20"
ratatui = "0.29.0"
regex-lite = "0.1.6"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "gzip"] }
async-trait = "0.1.88"
open = "5.3.2"
bitflags = "2.9.1"
base64 = "0.22.1"
itertools = "0.13.0"
url = "2.5.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2.175"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"]}

[features]
bundled_sqlite = ["rusqlite/bundled"]


[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
