[package]
name = "ytsub"
version = "0.7.0"
edition = "2024"
description = "A subscriptions only TUI Youtube client"
authors = ["Berke Enercan <berkeenercan@tutanota.com>"]
repository = "https://github.com/sarowish/ytsub"
license = "GPL-3.0"
readme = "README.md"
keywords = ["youtube", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = "4.5.50"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures-util = "0.3.31"
num_cpus = "1.17.0"
rand = "0.9.2"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["time", "macros", "rt-multi-thread", "process"] }
tokio-util = "0.7.16"
unicode-width = "0.2.0"
unicode-segmentation = "1.12.0"
toml = "0.9.8"
csv = "1.4.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
chrono = "0.4.42"
dyn-clone = "1.0.20"
ratatui = "0.29.0"
regex-lite = "0.1.8"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "gzip"] }
async-trait = "0.1.89"
open = "5.3.2"
bitflags = "2.10.0"
base64 = "0.22.1"
itertools = "0.14.0"
url = "2.5.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"]}

[features]
bundled_sqlite = ["rusqlite/bundled"]


[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
