[package]
name = "ytsub"
version = "0.8.0"
edition = "2024"
description = "A subscriptions only TUI Youtube client"
authors = ["Berke Enercan <berkeenercan@tutanota.com>"]
repository = "https://github.com/sarowish/ytsub"
license = "GPL-3.0"
readme = "README.md"
keywords = ["youtube", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = "4.6.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures-util = "0.3.32"
num_cpus = "1.17.0"
rand = "0.10.0"
rusqlite = { version = "0.39.0", features = ["fallible_uint"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["time", "macros", "rt-multi-thread", "process"] }
tokio-util = "0.7.18"
unicode-width = "0.2.2"
unicode-segmentation = "1.12.0"
toml = "1.0.6"
csv = "1.4.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
chrono = "0.4.44"
dyn-clone = "1.0.20"
ratatui = "0.30.0"
regex-lite = "0.1.9"
reqwest = { version = "0.13.2", features = ["json", "query", "gzip"] }
async-trait = "0.1.89"
open = "5.3.3"
bitflags = "2.11.0"
base64 = "0.22.1"
itertools = "0.14.0"
url = "2.5.8"
quantette = "0.5.1"
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }
which = "8.0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.183"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.39.0", features = ["bundled", "fallible_uint"]}

[features]
bundled_sqlite = ["rusqlite/bundled"]


[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
